Closed Bug 1436352 Opened 7 years ago Closed 7 years ago

Camera with microphone might have light on when disabled in application

Categories

(Core :: WebRTC: Audio/Video, defect, P2)

60 Branch
Unspecified
All
defect

Tracking

()

VERIFIED FIXED
mozilla60
Tracking Status
firefox-esr52 --- unaffected
firefox58 --- unaffected
firefox59 --- unaffected
firefox60 --- verified

People

(Reporter: Ovidiu, Assigned: pehrsons)

Details

Attachments

(1 file)

Affected versions]: Tested on Nightly 60.0a1(2018-02-07) [Affected platforms]: Tested on Windows 7 and Windows 10 [Steps to reproduce]: Prerequisites: 1. Make sure you have 2 cameras on your system. STR: 1. Open Firefox and go to Facebook and start a video call by selecting 1 of the cameras. [Expected result]: The camera starts to capture and the light is on. [Actual result]: The light from both cameras is on. NOTE: This issue is reproducible only on Windows.
Summary: Both cameras light is turned on while having a video call → The lights are turned on on both cameras while having a video call
Would be good to understand whether this is fallout from bug 1299515 or something older. If it's truly platform specific I assume it's something to blame in the windows camera integration, which is upstream code.
Rank: 15
Priority: -- → P2
I tested this issue with a Nightly 59.0a1 build from 2018-01-11 on Windows 7 x64, I attached 2 USB cameras and try to start a video call on appear.in and jit.si and both cameras light turned on, so I think this is not a recent regression. Please let me know how can I help you further with this issue.
A regression window would always help. Could you run it through mozregression? That of course assumes we have a version where it works as expected first.
Flags: needinfo?(ovidiu.boca)
I think I found out what is the problem here. My first impression is that having 2 cameras when you choose your microphone and camera to share if you chose separately, the mic from one camera and the video capture from another one, both lights are turned on. I will investigate further but I I think this is the issue here.
Flags: needinfo?(ovidiu.boca)
What do you think Andreas should we close this as invalid? Do you see any reason to keep this bug open? Thanks
Flags: needinfo?(apehrson)
Well, the mic doesn't normally keep the camera light on. Can you confirm whether it turns on the light in an audio-only capture on https://mozilla.github.io/webrtc-landing/gum_test.html ?
Flags: needinfo?(apehrson) → needinfo?(ovidiu.boca)
Tested on Mac and Windows and when I start to capture only audio the camera light is turned on, so the camera light is not turned on only if you start a video capture, this is expected?
Flags: needinfo?(ovidiu.boca)
Updates: In the tests from comment 7, I used Microsoft LifeCam HD-3000 - camera light is on I tested again with Webcam Logitech HD Pro C920 and the light is off. It seems that this is also related to what camera is used.
Right, so it seems the Microsoft LifeCam HD-3000 turns on the light also for audio capture. We're considering enabling the feature to turn off the capture while disabled also for audio.
OS: Windows → All
Assignee: nobody → apehrson
Status: NEW → ASSIGNED
Summary: The lights are turned on on both cameras while having a video call → Camera with microphone might have light on when disabled in application
Comment on attachment 8952142 [details] Bug 1436352 - Enable turning microphone off on track-disable by default. https://reviewboard.mozilla.org/r/221366/#review227494
Attachment #8952142 - Flags: review?(jib) → review+
Pushed by pehrsons@gmail.com: https://hg.mozilla.org/integration/autoland/rev/f5fa46ea1d22 Enable turning microphone off on track-disable by default. r=jib
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla60
I verified this on Windows 10 x64 Mac OS X 10.12 and Ubuntu 16.04 with Nightly (2018-02-21) using Microsoft LifeCam HD-3000.The site that I used is: https://mozilla.github.io/webrtc-landing/gum_test.html Mac and Windows results: The camera light is turned on when I click on Audio -> Allow If I click on "Stop" the camera light is turned off almost instantly (from what I understand this is the new expected behavior) Ubuntu result: The camera light is turned on when I click on Audio -> Allow If I click on "Stop" the camera light is turned off but only after I wait a few seconds (This seems to be the old intended behavior).
(In reply to ovidiu boca[:Ovidiu] from comment #14) > I verified this on Windows 10 x64 Mac OS X 10.12 and Ubuntu 16.04 with > Nightly (2018-02-21) using Microsoft LifeCam HD-3000.The site that I used > is: https://mozilla.github.io/webrtc-landing/gum_test.html > > Mac and Windows results: > > The camera light is turned on when I click on Audio -> Allow > If I click on "Stop" the camera light is turned off almost instantly (from > what I understand this is the new expected behavior) No. Stop will stop the track. This bug is about turning the light off on *disable* (in code this means `track.enabled = false;`). You will find that without this patch, the Stop button functions as expected as well. You can use a website that sets track.enabled to verify this. Appear.in does this for instance. Or use https://jsfiddle.net/pehrsons/41ypdtv0/ that I just wrote.
Flags: needinfo?(ovidiu.boca)
Ok, I used your test case and on Mac and Windows with Microsoft LifeCam HD-3000, the camera light is turned off after ~3 sec. since the "Disable" button is clicked. On Ubuntu only after ~10 sec. the camera light is turned off. The time for turning off the camera light wasn't supposed to be reduced?
Flags: needinfo?(ovidiu.boca) → needinfo?(apehrson)
Reducing the time is bug 1436074. On Ubuntu there seems to be a delay from when we stop the pulseaudio stream until when pulseaudio closes the device. This is fine since it not something we can improve really.
Flags: needinfo?(apehrson)
Thanks for clearing this out. I will mark this as verified fixed based on the fact that the camera light is turned off when you disable the mic, and the Ubuntu delay will be handled in bug 1436074.
Status: RESOLVED → VERIFIED
(In reply to ovidiu boca[:Ovidiu] from comment #18) > the Ubuntu delay will be handled in bug 1436074. No. The extra delay in pulseaudio is external and not something we can fix. Bug 1436074 is for making the delay zero unless you enabled the device less than three seconds ago.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: