Bug 1436352 - Enable turning microphone off on track-disable by default. r=jib

MozReview-Commit-ID: LwIPkOD46p3